+lil overflow fixes (fail), +bus image fix

--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -5,6 +5,8 @@
 	padding-bottom: 40px
 	margin-bottom: 160px
 	overflow-x: hidden
+	overflow-y: hidden
+	text-align: center
 	+r(991)
 		margin-bottom: 0
 		padding-bottom: 65px
@@ -139,9 +141,10 @@
 			//border: 1px solid red
 			bottom: -90px
 			left: 0
-			background: url('../img/bus.png') no-repeat center
+			background: url('../img/bus2.png') no-repeat center
 			+r(1199)
 				left: -200px
+				bottom: -160px
 			+r(991)
 				height: 488px
 				width: 365px
@@ -151,6 +154,9 @@
 			+r(767)
 				position: static	
 				margin-bottom: 15px
+			+r(767)
+				width: 260px
+				height: 270px
 		.col
 			max-width: 520px
 			margin-left: auto
